Project

General

Profile

Actions

Bug #13498

closed

Weakref, Weakmap and define_finalizer don't work on frozen objects

Bug #13498: Weakref, Weakmap and define_finalizer don't work on frozen objects

Added by herwin (Herwin W) over 9 years ago. Updated about 7 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.4.1p111 (2017-03-22 revision 58053) [x86_64-linux] (but seen the same issue with 2.3 and 2.1)
[ruby-core:80835]

Description

I'm just creating a single ticket for these issues, I guess they're actually all the same (I've seen weakref uses weakmap, not sure about define_finalizer).

require 'weakref'

map = ObjectSpace::WeakMap.new

o = Object.new
o.freeze

begin
  WeakRef.new(o)
rescue => e
  STDERR.puts e
end

begin
  map[o] = 'foo'
rescue => e
  STDERR.puts e
end

begin
  map['bar'] = o
rescue => e
  STDERR.puts e
end

begin
  ObjectSpace.define_finalizer(o, ->(id) { p id })
rescue => e
  STDERR.puts e
end

Every statement here raises the runtime error "can't modify frozen Object". The documentation doesn't mention that frozen objects are not allowed, the closest reference we get is a short paragraph in WeakRef: "With this you will have to limit your self to String keys, otherwise you will get an ArgumentError because WeakRef cannot create a finalizer for a Symbol. Symbols are immutable and cannot be garbage collected"

Updated by nobu (Nobuyoshi Nakada) about 9 years ago Actions #1 [ruby-core:81697]

  • Status changed from Open to Assigned
  • Assignee set to nobu (Nobuyoshi Nakada)

Weakref is implemented by finalizer to notify that an object is collected, and you can't define finalizers on frozen objects.
Probably we need to move finalizer flags to a separate region (like bitmap marking).

Updated by RubyBugs (A Nonymous) almost 9 years ago Actions #2 [ruby-core:83547]

nobu (Nobuyoshi Nakada) wrote:

Weakref is implemented by finalizer to notify that an object is collected, and you can't define finalizers on frozen objects.
Probably we need to move finalizer flags to a separate region (like bitmap marking).

Yes please. I also came here having discovered this independently, and also see it as a bug. It makes designs using frozen objects difficult to this friction with a leaky abstraction in the language implementation.

Unless I am mistaken, and mutating objects is an intentional part of the design of the GC system?

Updated by nobu (Nobuyoshi Nakada) about 7 years ago Actions #3

  • Status changed from Assigned to Closed

Applied in changeset git|f3c81b4e90ec492382e299573f2c3ac272adbb5f.


Frozen objects in WeakMap

  • gc.c (wmap_aset): bypass check for frozen and allow frozen
    object in WeakMap. [Bug #13498]
Actions

Also available in: PDF Atom