gc.c
@@ -2937,13 +2937,20 @@ should_be_callable(VALUE block)
 		 rb_obj_class(block));
     }
 }
+
 static void
-should_be_finalizable(VALUE obj)
+should_be_finalizable_internal(VALUE obj)
 {
     if (!FL_ABLE(obj)) {
 	rb_raise(rb_eArgError, "cannot define finalizer for %s",
 		 rb_obj_classname(obj));
     }
+}
+
+static void
+should_be_finalizable(VALUE obj)
+{
+    should_be_finalizable_internal(obj);
     rb_check_frozen(obj);
 }
 
@@ -10399,8 +10406,8 @@ wmap_aset(VALUE self, VALUE wmap, VALUE orig)
     struct weakmap *w;
 
     TypedData_Get_Struct(self, struct weakmap, &weakmap_type, w);
-    should_be_finalizable(orig);
-    should_be_finalizable(wmap);
+    should_be_finalizable_internal(orig);
+    should_be_finalizable_internal(wmap);
     define_final0(orig, w->final);
     define_final0(wmap, w->final);
     st_update(w->obj2wmap, (st_data_t)orig, wmap_aset_update, wmap);
